--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/load-twitter-followers.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -outDir dist",
+    "build": "rm -rf dist && tsc -outDir dist",
     "load-twitter-followers": "npm run build && node dist/load-twitter-followers.js"
   },
   "author": "",
