--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsc -outDir dist",
-    "load-twitter-followers": "npm run build && node dist/load-twitter-followers.js"
+    "load-twitter-followers": "npm run build && GOOGLE_APPLICATION_CREDENTIALS=twitter-bot-detector-service-account.json node dist/load-twitter-followers.js"
   },
   "author": "",
   "license": "ISC",
